fix(telecom): text overflow on telephony alias configuration (#5270)
ref: #MANAGER-7183

--- a/packages/manager/apps/telecom/src/components/telecom/telephony/group/number/feature/ovhPabx/dialplan/dialplan.less
+++ b/packages/manager/apps/telecom/src/components/telecom/telephony/group/number/feature/ovhPabx/dialplan/dialplan.less
@@ -152,7 +152,6 @@
         max-width: 348px;
         flex-shrink: 0;
         padding: 8px 16px;
-        white-space: nowrap;
       }
 
       &-name {
